# quanta-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: strategy_benchmarks.rs
python/quanta_engine/: __init__.py  example.py  print_init.py
src/: lib.rs
src/execution/: executor.rs
src/models/: order.rs  user.rs
src/risk/: mod.rs  risk_validator.rs
src/strategy/: mod.rs  strategy.rs  strategy_manager.rs
src/validation/: mod.rs  order_validator.rs
tests/: integration_tests.rs  test_mocked_brokers.py  test_python.py  test_rust.rs
