[package]
name = "quanta_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "quanta_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
futures = "0.3"
pyo3-asyncio = { version = "0.20", features = ["attributes", "async-std-runtime"] }
async-std = "1.9"

[dev-dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
criterion = "0.4"

[[bench]]
name = "strategy_benchmarks"
harness = false